--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -9,9 +9,34 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body class="antialiased">
-    <nav>
-      <h1>djcommerce</h1>
+    <!-- navigation menu -->
+    <nav class="py-4 w-11/12 mx-auto flex items-center justify-between">
+      <h1 class="text-2xl font-extrabold">djcommerce</h1>
+      <ul class="flex">
+        <li class="mx-4">
+          <a href="#" class="tracking-wide">What's New</a>
+        </li>
+        <li class="mx-4">
+          <a href="#" class="tracking-wide">All Products</a>
+        </li>
+        |
+        <ul class="flex ml-5">
+          <li class="mx-3">
+            <a href="#" class="tracking-wide">Account</a>
+            {% comment %} <div class="flex items-center">
+              <div class="h-6 w-6 bg-black rounded-full"></div>
+              <p class="tracking-wide ml-2">@username</p>
+            </div> {% endcomment %}
+          </li>
+          <li class="mx-3">
+            <a href="#" class="tracking-wide">My Cart</a>
+          </li>
+        </ul>
+      </ul>
     </nav>
+    <hr />
+    <!-- end navigation menu -->
+
     {% block content %}
     <div></div>
     {% endblock content %}
