--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -1,1 +1,34 @@
-{% extends 'store.html' %}
+{% extends 'store.html' %} 
+
+{% block title %} djCommerce | Hello {% endblock title %} 
+
+{% block content %}
+<!-- search form -->
+<div class="relative w-full h-48 flex items-end justify-center">
+	<div class="bg-gray-300 absolute w-full h-full z-10">
+		
+	</div>
+	<form class="z-40 relative mb-8 w-1/2 mx-auto" action="">
+		<div class="inline-flex w-full">
+			<input type="text" placeholder="Search for products..." class="text-lg py-2 px-3 rounded-lg w-full">
+			<button type="submit" class="text-lg ml-1 py-2 px-8 bg-green-400 hover:bg-green-500 text-white rounded-lg">Search</button>
+		</div>
+	</form>
+</div>
+<!-- end search form -->
+
+<div class="py-10 w-11/12 mx-auto">
+	<h2 class="mb-6 text-xl font-semibold">What's New?</h2>
+	<div class="grid grid-cols-5 gap-4">
+		<div class="rounded-md">
+			<div class="relative h-64 w-full">
+				<img src="https://images.theconversation.com/files/293774/original/file-20190924-54793-157i3zo.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=1200.0&fit=crop" alt="Product Name" class="absolute w-full h-full object-cover"  />
+			</div>
+			<div class="bg-red-100 flex flex-col">
+				<h3 class="p-3">Product Name</h3>
+				<a href="#" class="w-full py-2 bg-red-400 hover:bg-red-500 text-center text-white">Add to cart</a>
+			</div>
+		</div>
+	</div>
+</div>
+{% endblock content %}
